force-app/main/default/objects/IndividualApplication/fields/A_A_Costs_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>A_A_Costs_Breakdown__c</fullName>
    <description>A&amp;A costs breakdown</description>
    <label>A&amp;A Costs Breakdown</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>