force-app/main/default/objects/IndividualApplication/fields/Applicant_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IDs must allow for the addition of future projects/ schemes &amp; not conflict with previous SHDF, HUG or LAD project IDs</description>
    <inlineHelpText>Lookup to Account record where applicant is a business, LA or other organisation</inlineHelpText>
    <label>Applicant Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>