force-app/main/default/objects/IndividualApplication/fields/Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference__c</fullName>
    <formula>FundingOpportunity.Funding_Scheme_Acronym__c + &quot;-APP-&quot;+IF(CONTAINS(ApplicationName, &quot; &quot;), LEFT(ApplicationName, FIND(&quot; &quot;, ApplicationName) - 1), ApplicationName)+ &quot;-&quot;+ MID( Name , 4, LEN(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Reference</label>
    <type>Text</type>
</CustomField>