force-app/main/default/objects/IndividualApplication/fields/Co_Funding_Spend_25_26__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_Spend_25_26__c</fullName>
    <label>Co-Funding Spend 25/26</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>