force-app/main/default/objects/IndividualApplication/fields/Co_Funding_Spend_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_Spend_Per_Year__c</fullName>
    <description>CF Milestones - Co-funding Spend per FY,SP Milestones - Co-funding spend per year</description>
    <label>Co-Funding Spend Per Year</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>