force-app/main/default/objects/IndividualApplication/fields/End_Date_Of_Phases__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Of_Phases__c</fullName>
    <description>CF Milestones - End date of phases</description>
    <label>End Date Of Phases</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>