force-app/main/default/objects/IndividualApplication/fields/Energy_Savings_26_27__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_26_27__c</fullName>
    <label>Energy Savings 26/27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>