force-app/main/default/objects/IndividualApplication/fields/Energy_Savings__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings__c</fullName>
    <description>Total energy savings (SPs)</description>
    <label>Energy Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>