force-app/main/default/objects/IndividualApplication/fields/Energy_Savings_kWh__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_kWh__c</fullName>
    <description>Total energy savings (SPs)</description>
    <label>Energy Savings (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>