force-app/main/default/objects/IndividualApplication/fields/Energy_Savings_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_Per_Year__c</fullName>
    <description>SP Milestones - Energy savings per year</description>
    <label>Energy Savings Per Year</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>