force-app/main/default/objects/IndividualApplication/fields/Grant_Recipient_Size__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Size__c</fullName>
    <description>Large business: a business with 250 or more employees
Medium-sized business: a business with 50 to 249 employees
Small business: a business with 0 to 49 employees
Small and medium-sized enterprises (SMEs: businesses with 0 to 249 employees)</description>
    <label>Grant Recipient Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large organisation</fullName>
            </value>
            <value>
                <fullName>Medium-sized organisation</fullName>
            </value>
            <value>
                <fullName>Small organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>