force-app/main/default/objects/IndividualApplication/fields/Grant_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Type__c</fullName>
    <label>Grant Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Housing Association</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Combined Authority</fullName>
            </value>
            <value>
                <fullName>Registered Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>