force-app/main/default/objects/IndividualApplication/fields/Grant_Spend_25_26__c.field-meta.xml
<CustomField>
    <fullName>Grant_Spend_25_26__c</fullName>
    <label>Grant Spend 25/26</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>