force-app/main/default/objects/IndividualApplication/fields/Grant_Spend_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Spend_Per_Year__c</fullName>
    <description>CF Milestones -Grant Spend per FY,SP Milestones - Grant spend per year</description>
    <label>Grant Spend Per Year</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>