force-app/main/default/objects/IndividualApplication/fields/No_Of_Homes_24_25__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_24_25__c</fullName>
    <label>No. Of Homes 24/25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>