force-app/main/default/objects/IndividualApplication/fields/No_Of_Homes_25_26__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_25_26__c</fullName>
    <description>SP Milestones - No. of homes per year</description>
    <label>No. Of Homes 25/26</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>