force-app/main/default/objects/IndividualApplication/fields/No_Of_Homes_26_27__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_26_27__c</fullName>
    <label>No. Of Homes 26/27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>