force-app/main/default/objects/IndividualApplication/fields/No_of_Homes_for_On_Gas_grid_LCH_Offer__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_for_On_Gas_grid_LCH_Offer__c</fullName>
    <description>No. of homes accessing the on-gas grid LCH offer</description>
    <inlineHelpText>No. of homes accessing the on-gas grid LCH offer</inlineHelpText>
    <label>No. of Homes for On Gas grid LCH Offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>