force-app/main/default/objects/IndividualApplication/fields/No_Of_Homes_Per_Phase__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_Per_Phase__c</fullName>
    <description>CF Milestones - No. of homes per phase</description>
    <label>No. Of Homes Per Phase</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>