force-app/main/default/objects/IndividualApplication/fields/No_Of_Homes_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_Per_Year__c</fullName>
    <description>SP Milestones - No. of homes per year</description>
    <label>No. Of Homes Per Year</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>