force-app/main/default/objects/IndividualApplication/fields/No_of_Homes_To_EPC_C_24_25__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_To_EPC_C_24_25__c</fullName>
    <description>SP Milestones - No. of homes to EPC C per year</description>
    <inlineHelpText>SP Milestones - No. of homes to EPC C per year</inlineHelpText>
    <label>No. of Homes To EPC C 24/25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>