force-app/main/default/objects/IndividualApplication/fields/No_of_Homes_To_EPC_C_26_27__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_To_EPC_C_26_27__c</fullName>
    <description>No. of Homes To EPC C 26/27</description>
    <inlineHelpText>No. of Homes To EPC C 26/27</inlineHelpText>
    <label>No. of Homes To EPC C 26/27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>