force-app/main/default/objects/IndividualApplication/fields/PublicSector__AdditionalLocationDetails__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__AdditionalLocationDetails__c</fullName>
    <description>Additional location details for which the access is requested</description>
    <label>Additional Location Details</label>
    <type>TextArea</type>
</CustomField>