force-app/main/default/objects/IndividualApplication/fields/PublicSector__BusinessOrOccupationRole__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__BusinessOrOccupationRole__c</fullName>
    <description>Business or Occupation Role</description>
    <label>Business or Occupation Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airline Operations</fullName>
            </value>
            <value>
                <fullName>Border Protection and Transportation Security</fullName>
            </value>
            <value>
                <fullName>Business Traveler</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Correctional Facility Operations</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Emergency Response and Public Safety</fullName>
            </value>
            <value>
                <fullName>Environmental or Janitorial  Services</fullName>
            </value>
            <value>
                <fullName>Farmworker</fullName>
            </value>
            <value>
                <fullName>Food Preparation</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>In-Home Repair Services</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Meat and Poultry Processing</fullName>
            </value>
            <value>
                <fullName>Office Worker</fullName>
            </value>
            <value>
                <fullName>Postmortem Care</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>Solid Waste or Wastewater Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>