force-app/main/default/objects/IndividualApplication/fields/PublicSector__Details__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Details__c</fullName>
    <label>Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>