force-app/main/default/objects/IndividualApplication/fields/PublicSector__LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__LocationAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>