force-app/main/default/objects/IndividualApplication/fields/PublicSector__LocationContactTitle__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__LocationContactTitle__c</fullName>
    <label>Location Contact Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>