force-app/main/default/objects/IndividualApplication/fields/PublicSector__OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__OrganizationName__c</fullName>
    <description>Name of the organization</description>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>