force-app/main/default/objects/IndividualApplication/fields/Starting_Date_Of_Phases__c.field-meta.xml
<CustomField>
    <fullName>Starting_Date_Of_Phases__c</fullName>
    <label>Starting Date Of Phases</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>