force-app/main/default/objects/IndividualApplication/fields/Total_Co_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding__c</fullName>
    <formula>Total_Co_Funding_Capital__c +  Total_Co_Funding_A_A__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>