force-app/main/default/objects/IndividualApplication/fields/Total_Co_Funding_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_A_A__c</fullName>
    <description>Total co-funding Admin and Ancillary</description>
    <label>Total Co-Funding A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>