force-app/main/default/objects/IndividualApplication/fields/Total_Co_Funding_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_Capital__c</fullName>
    <label>Total Co-Funding Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>