force-app/main/default/objects/IndividualApplication/fields/Total_Co_Funding_Towards_Homes_Going_To__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_Towards_Homes_Going_To__c</fullName>
    <description>Total co-funding (towards homes going to and beyond EPC B)</description>
    <label>Total Co-Funding (Towards Homes Going To</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>