force-app/main/default/objects/IndividualApplication/fields/Total_Grant_Funding_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Funding_A_A__c</fullName>
    <description>Total grant funding A&amp;A</description>
    <label>Total Grant Funding A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>