force-app/main/default/objects/IndividualApplication/fields/Total_Homes_To_Be_Treated__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_To_Be_Treated__c</fullName>
    <description>Total homes to be treated</description>
    <label>Total Homes To Be Treated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>