force-app/main/default/objects/IndividualApplication/fields/Total_Homes_to_be_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_to_be_Upgraded__c</fullName>
    <description>This data field relates to the ‘homes completed’ KPI for both schemes. When a home is at the status of complete, it is then classed as ‘upgraded’</description>
    <inlineHelpText>This data field relates to the ‘homes completed’ KPI for both schemes. When a home is at the status of complete, it is then classed as ‘upgraded’</inlineHelpText>
    <label>Total Homes to be Upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>