force-app/main/default/objects/IndividualApplication/fields/Total_Project_Costs_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs_A_A__c</fullName>
    <formula>Total_Grant_Funding_A_A__c + Total_Co_Funding_A_A__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Costs A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>