force-app/main/default/objects/IndividualApplication/fields/Total_Project_Costs_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs_Capital__c</fullName>
    <formula>Total_Co_Funding_Capital__c +  Total_Grant_Funding_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Costs Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>