force-app/main/default/objects/IndividualApplication/fields/XTotal_Project_Costs_A_A__c.field-meta.xml
<CustomField>
    <fullName>XTotal_Project_Costs_A_A__c</fullName>
    <description>Total project costs Admin and Ancillary</description>
    <label>XTotal Project Costs A&amp;A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>