force-app/main/default/objects/IndividualApplication/fields/XTotal_Project_Costs_Capital__c.field-meta.xml
<CustomField>
    <fullName>XTotal_Project_Costs_Capital__c</fullName>
    <label>XTotal Project Costs Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>