force-app/main/default/objects/IndividualApplication/listViews/Consortium_LG_Applications.listView-meta.xml
<ListView>
    <fullName>Consortium_LG_Applications</fullName>
    <columns>Name</columns>
    <columns>ApplicationName</columns>
    <columns>ApplicationType</columns>
    <columns>Funding_Award__c</columns>
    <columns>RequestedAmount</columns>
    <columns>Total_Homes_to_be_Upgraded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>IndividualApplication.Local_Grant</value>
    </filters>
    <label>Consortium LG Applications</label>
</ListView>