force-app/main/default/objects/IndividualApplication/listViews/Program_Update.listView-meta.xml
<ListView>
    <fullName>Program_Update</fullName>
    <columns>Name</columns>
    <columns>Applicant_Organisation__c</columns>
    <columns>Total_Grant_Funding_Capital__c</columns>
    <columns>Total_Grant_Funding_A_A__c</columns>
    <columns>Total_Homes_To_Be_Treated__c</columns>
    <columns>Region__c</columns>
    <columns>Postcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Program Update</label>
</ListView>